--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ nav div form a{
 /* Responsive @768px */
 @media (max-width: 768px) {
     .mini-nv{
+        padding-inline: 20px;
         flex-wrap: wrap;
     }
     .mini-nv p{
